--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Primeiro commit no git</h1>
     <h2>Meu segundo commit</h2>
+    <p>Hoje tá top pra comer um lanchão</p>
 </body>
 </html>
